fixed social media links to actually point where they need to go and made email subscription input box more visible

--- a/wp-content/themes/sho_child/css/style.css
+++ b/wp-content/themes/sho_child/css/style.css
@@ -1355,6 +1355,7 @@ body.royal_loader {
 		padding:0px;
 		text-transform: uppercase;
 		width: 100%;
+        background-color:grey;
 	}
 	
 
